Header z-index bug fixed and media queries added

--- a/src/components/Divider/Divider.scss
+++ b/src/components/Divider/Divider.scss
@@ -1,7 +1,8 @@
+@use '../../styles/partials/mixins' as *;
+
 .divider {
     width: 100%;
-    padding: 1.5rem;
-
+    padding: 0 1.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,11 +13,15 @@
         white-space: nowrap;
         content: "01001111 01110000 01100101 01101110 00100000 01110100 01101000 01100101 00100000 01100011 01101111 01101110 01110011 01101111 01101100 01100101 01001111 01110000 01100101 01101110 00100000 01110100 01101000 01100101 00100000 01100011 01101111 01101110 01110011 01101111 01101100 01100101 01001111 01110000 01100101 01101110 00100000 01110100 01101000 01100101 00100000 01100011 01101111 01101110 01110011 01101111 01101100";
         animation: 1s linear 0s infinite normal none running bHIikm;
-        font-size: 32px;
+        font-size: 24px;
         width: 100%;
         background-image: linear-gradient(to right, rgba(0, 255, 0, 0), #00ff00, #00ff00, #00aa00, rgba(0, 255, 0, 0));
         -webkit-background-clip: text;
         color: transparent;
+
+        @include tablet {
+            font-size: 32px;
+        }
     }
 }
 
