--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -23,3 +23,7 @@ a:link,
 a:visited {
     text-decoration: none;
 }
+
+ul {
+    list-style: none;
+}
