--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -1,4 +1,5 @@
 @use './variables' as *;
+@use './mixins' as *;
 
 // FONT FACES
 
@@ -24,7 +25,11 @@
 
 .section-heading {
     color: $color-white;
-    font-size: 36px;
+    font-size: 24px;
     font-weight: 700;
     text-align: center;
+
+    @include tablet {
+        font-size: 32px;
+    }
 }
